--- a/.gitmodules
+++ b/.gitmodules
@@ -220,3 +220,6 @@
 [submodule "bundle/snipmate2"]
 	path = bundle/snipmate2
 	url = https://github.com/msanders/snipmate.vim
+[submodule "bundle/jedi-vim"]
+	path = bundle/jedi-vim
+	url = git@github.com:davidhalter/jedi-vim.git
